# pdf-editor-offline

./: .env.example  .gitignore  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PROJECT_ANALYSIS_AND_IMPROVEMENT_PLAN.md  README.md  design.md  package-lock.json  pyproject.toml  run_ci.sh  start.sh
.github/workflows/: ci.yml
api/: deps.py  main.py  middleware.py  models.py  security.py  storage.py
api/routes/: documents.py  tools.py
base/: ADVANCED_EDITING_REMEDIATION_PLAN.md
docs/: FEATURES_ROADMAP.md
examples/: README.md  batch_process_pdfs.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/__tests__/: App.test.tsx  EditorContext.test.tsx  Header.test.tsx  ThemeToggle.test.tsx  setup.ts
frontend/src/constants/: index.ts
frontend/tests/: AdvancedTextTools.spec.tsx  AdvancedTools.spec.tsx  AnnotationTools.spec.tsx  CollaborativeAnnotations.spec.tsx  ConversionTools.spec.tsx  ImageTools.spec.tsx  ManipulationTools.spec.tsx  NavigationTools.spec.tsx  PDFViewer.lifecycle.spec.tsx  SecurityTools.spec.tsx  Sidebar.test.tsx  ToolToast.spec.tsx  api-response.spec.ts  components.spec.tsx  conversion.spec.tsx  editor-context.spec.tsx  setup.ts
pdf_editor_offline/: __init__.py
pdfsmarteditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pdfsmarteditor/core/: annotation_enhancer.py  converter.py  image_processor.py  manipulator.py  navigation_manager.py  object_inspector.py  rich_text_editor.py  text_processor.py
tests/: conftest.py  run_frontend_smoke.sh  test_advanced_api_errors.py  test_advanced_navigation_api.py  test_advanced_text_api.py  test_advanced_upload_flows.py  test_api_tools.py  test_page_manipulation.py  test_phase1_user_experience.py  test_phase2_insert_pages.py  test_phase3_extended_conversion.py  test_phase4.py  test_security.py
tests/e2e/: advanced_editing_smoke.py  pdfviewer_smoke.py
(+32 files in other folders)
