[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-editor-offline"
version = "2.0.0"
description = "A free PDF editor offline with CLI and API capabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Othmane BLIAL"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Editors",
    "Topic :: Utilities"
]
keywords = [
    "pdf editor",
    "free pdf editor",
    "pdf editor offline",
    "offline pdf editor",
    "pymupdf",
    "cli",
    "pdf manipulation",
    "api",
]
dependencies = [
    "PyMuPDF",
    "Pillow",
    "typer",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pdf2docx",
    "python-pptx",
    "pdfplumber",
    "pandas",
    "openpyxl",
    "pytesseract",
    "python-dotenv",
    "typing_extensions",
    "markdown",
    "reportlab",
    "ebooklib"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/OthmaneBlial/pdf-editor-offline"
Repository = "https://github.com/OthmaneBlial/pdf-editor-offline"
Issues = "https://github.com/OthmaneBlial/pdf-editor-offline/issues"

[project.scripts]
pdf-editor-offline = "pdfsmarteditor.cli.main:app"
pdfsmarteditor = "pdfsmarteditor.cli.main:app"

[tool.setuptools.packages.find]
include = ["pdfsmarteditor*", "pdf_editor_offline*"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
